--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,10 @@ bitflags = "1.2.1"
 vcell = "0.1.2"
 nb = "1.0.0"
 
-[dependencies.embedded-hal-02]
-version = "0.2.7"
-package = "embedded-hal"
+[dependencies.embedded-can]
+version = "0.4.1"
+package = "embedded-can"
+optional = true
 
 [dependencies.defmt]
 optional = true
@@ -35,6 +36,7 @@ version = ">=0.2.3,<0.4.0"
 
 [features]
 unstable-defmt = ["defmt"]
+can = ["embedded-can"]
 
 [profile.test]
 opt-level = "s"
